# SaaSChat

saaschat-api/: .env  .gitignore  Cargo.toml  README.md  bun.lockb  drizzle.config.json  drizzle.config.ts  package.json
saaschat-api/drizzle/: relations.ts  schema.ts
saaschat-api/drizzle/meta/: _journal.json
saaschat-api/src/: database.ts  index.js  index.ts
saaschat-api/src/controllers/api/: teams.ts
saaschat-api/src/controllers/ws/: send.ts  validate-message.ts
saaschat-api/src/database/: cassandra.js  querybuilder.js
saaschat-api/src/database/migrations/: messages.sql  users.sql
saaschat-api/src/database/models/: users.js
saaschat-api/src/drizzle/: index.js
saaschat-api/src/drizzle/migrations/: 0002_sweet_diamondback.sql  0003_green_viper.sql
saaschat-api/src/drizzle/migrations/meta/: 0001_snapshot.json  0003_snapshot.json  _journal.json
saaschat-api/src/drizzle/schema/: messages.js  users.js
saaschat-api/src/router/: index.js
saaschat-api/src/schema/: chats.ts  chats_map.ts  chats_mappings.ts  guests.ts  index.ts  messages.ts  users.ts
saaschat-api/src/services/chats/: chats.get.ts  index.ts
saaschat-api/src/services/messages/: index.ts  messages.dto.ts  messages.get.ts  messages.post.ts
saaschat-api/src/services/teams/: index.ts  teams.dto.ts  teams.get.ts
saaschat-api/src/utils/: actions.js
saaschat-api/src/websocket/: onclose.js  onmessage.js  onopen.js
saaschat-api/src/websocket/handlers/: messages.js  open.js
saaschat-api/src/websocket/handlers/messages/: messages.js
saaschat-api/src/websocket/handlers/users/: users.js
(+128 files in other folders)
