[package]
name = "saaschat-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
tokio-stream = "0.1.14"
mini-redis = "0.4"
tungstenite = "0.20.1"
serde_json = "1"
url = "2.4"
warp = "0.3"
futures = "0.3.28"